--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="Fonctions.html">Fonctions</a></li>
                 <li><a href="Pour.html">La boucle Pour</a></li>
                 <li><a href="Tantque.html">La boucle Tant que</a></li>
-                <li>Listes</li>
+                <li><a href="Listes.html">Les listes</a></li>
                 <li>Tuples</li>
                 <li>Dictionnaires</li>
                 <li>
