--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="POO.html">Programmation orienté objet</a></li>
                 <li><a href="DiviserRegner.html">Diviser pour régner</a></li>
                 <li><a href="TypesAbstraits.html">Types abstraits</a></li>
+                <li><a href="Arbres.html">Arbres binaires</a></li>
             </ol>
         </div>
     </body>
