--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="Pour.html">La boucle Pour</a></li>
                 <li><a href="Tantque.html">La boucle Tant que</a></li>
                 <li><a href="Listes.html">Les listes</a></li>
-                <li>Tuples</li>
+                <li><a href="Tuples.html">Tuples et chaînes de caractères</a></li>
                 <li>Dictionnaires</li>
                 <li>
                     <ol class="sous-num">
