--- a/Tuples.html
+++ b/Tuples.html
@@ -48,7 +48,7 @@
                 <p class="code">
                     mot = 'bonjour'<br/>
                     for lettre in mot :<br/>
-                    &nbsp;&nbsp;&nbsp;&nbsp;print(mot)
+                    &nbsp;&nbsp;&nbsp;&nbsp;print(lettre)
                 </p>
             </div>
             <div class='exercice'>
@@ -78,7 +78,7 @@
                         0<br/>
                         >>> compte_lettre("Banane", "n")<br/>
                         2<br/>
-                        >>> contient("", "N")<br/>
+                        >>> compte_lettre("", "N")<br/>
                         0
                     </p>
                 </div>
