--- a/Tuples.html
+++ b/Tuples.html
@@ -83,6 +83,15 @@
                     </p>
                 </div>
             </div>
+            Bien entendu, on peut aussi réaliser une boucle en utilisant les indices. Exemple :
+            <div class="algo">
+                <input type="button" class="copier" value="📑" title="copier">
+                <p class="code">
+                    mot = 'bonjour'<br/>
+                    for i in range(len(mot)) :<br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;print(mot[i])
+                </p>
+            </div>
             <div class='exercice'>
                 Un palindrome est un mot qui peut se lire dans les deux sens.
                 Ecrire une fonction <mark class="code">est_palindrome(mot)</mark> qui vérifie si le <mark class="code">mot</mark> est un palindrome.
