--- a/Tuples.html
+++ b/Tuples.html
@@ -9,7 +9,7 @@
             <h1>Tuples et chaînes de caractères</h1>
             <p>
                 Les tuples (appelés aussi n-uplets) sont très semblables aux listes.
-                La principale différence est que les tuples ne sont pas modifiables, ils sont <mark>immuables</mark>.
+                La principale différence est que les tuples ne sont pas modifiables, ils sont <mark>immutables</mark>.
                 Il en est de même pour les chaînes de caractères.
                 La plupart des fonctions s'appliquant aux listes s'appliquent aussi aux tuples et aux chaînes de caractères.
             </p>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <h3>Modification d'une chaîne de caractères</h3>
-            Comme les chaînes de caractères sont immuables, on ne peut pas les modifier. Vérifions le sur un exemple :
+            Comme les chaînes de caractères sont immutables, on ne peut pas les modifier. Vérifions le sur un exemple :
             <div class="algo">
                 <input type="button" class="copier" value="📑" title="copier">
                 <p class="code">
